<resources>
    <string name="app_name">EveryDay</string>
    <string name="infos_action_string" translatable="true">Infos</string>
    <string name="infos_text_string" translatable="true">
        <![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id vestibulum lectus, nec congue dui. Morbi sed fermentum tellus. Quisque consectetur ullamcorper ante a viverra. Fusce quis malesuada nisl. Cras egestas condimentum nisi et porttitor. Vivamus id arcu turpis. Cras dignissim vehicula metus, at feugiat purus cursus in. Quisque feugiat sem aliquam, consectetur odio id, accumsan mi. Vivamus dignissim feugiat ipsum vitae pretium. Praesent eu tortor sem. Maecenas eu purus ornare, posuere urna vitae, maximus lacus. Integer venenatis neque eu ultrices feugiat. Morbi hendrerit tellus massa, vel dignissim elit ullamcorper sed. In posuere dapibus ex sit amet tempus.
Vestibulum mattis, mi et lacinia tristique, mi diam varius magna, eget porta ex metus a risus. Nam rutrum neque orci, eget congue ipsum tincidunt non. Quisque pulvinar sed velit eu cursus. Vestibulum nec porta elit. In eget diam magna. Integer in eros interdum, ornare mi quis, sagittis diam. Aliquam ullamcorper quam a gravida lacinia. Maecenas a mattis metus. Nunc faucibus auctor tellus sed accumsan. Fusce posuere odio eget nibh iaculis vehicula. In hac habitasse platea dictumst. Donec dictum viverra diam sit amet tincidunt. Etiam pellentesque blandit massa, ut hendrerit purus accumsan eget. Cras viverra, nunc non semper ullamcorper, nisl ante sodales ante, at venenatis justo tellus a ipsum. Vestibulum aliquet accumsan pretium. Sed rhoncus a orci sit amet porta.
        ]]>
    </string>
    <string name="app_version">Version 0.3</string>
    <string name="app_made_by" translatable="true">Création et réalisation :</string>
    <string name="app_made_name">Shiva Bernhard</string>
    <string name="contact">shiva.bernhard@shining-cat.fr</string>
    <string name="website">www.shining-cat.fr</string>
    <string name="shining_cat_logo_content_description">Shining-cat logo</string>
    <string name="generic_string_NO" translatable="true">Non</string>
    <string name="generic_string_YES" translatable="true">Oui</string>
    <string name="generic_string_VALIDATE" translatable="true">Valider</string>
    <string name="generic_string_BACK" translatable="true">Retour</string>
    <string name="generic_string_CANCEL" translatable="true">Annuler</string>
    <string name="generic_string_OK" translatable="true">OK</string>
    <string name="generic_string_CLOSE" translatable="true">Fermer</string>
    <string name="generic_string_HOURS" translatable="true">Heure(s)</string>
    <string name="generic_string_SHORT_HOURS" translatable="true">h</string>
    <string name="generic_string_MINUTES" translatable="true">Minute(s)</string>
    <string name="generic_string_SHORT_MINUTES" translatable="true">mn</string>
    <string name="generic_string_SHORT_SECONDS" translatable="true">s</string>
    <string name="generic_string_WARNING" translatable="true">Attention</string>
    <string name="generic_string_SHARE" translatable="true">Partager</string>
    <string name="generic_string_EDIT" translatable="true">Modifier</string>
    <string name="generic_string_DELETE" translatable="true">Supprimer</string>
    <string name="generic_string_ERROR" translatable="true">Erreur</string>
    <string name="generic_string_OPEN_SETTING" translatable="true">Ouvrir le réglage</string>
    <string name="generic_string_CONTINUE" translatable="true">Continuer</string>
    <string name="generic_string_PASS" translatable="true">Passer</string>
    <string name="delete_all_sessions_task_completed_message" translatable="true">Toutes les sessions enregistrées ont été effacées.</string>
    <string name="delete_one_session_task_completed_message" translatable="true">La session a été effacée.</string>
    <string name="insert_one_session_task_completed_message" translatable="true">La session a été enregistrée.</string>
    <string name="update_one_session_task_completed_message" translatable="true">La session a été mise à jour.</string>
    <string name="export_sessions_to_csv_task_completed_title" translatable="true">Export terminé</string>
    <string name="export_sessions_to_csv_task_completed_message" translatable="true">Les sessions ont bien été exportées:\n%1$s</string>
    <string name="import_sessions_from_csv_task_completed_title" translatable="true">Import terminé</string>
    <string name="import_sessions_from_csv_task_completed_message" translatable="true">%1$d sessions ont bien été importées.</string>
    <string name="reminder_alarm_notification_title" translatable="true">Rappel</string>
    <string name="reminder_alarm_notification_default_text" translatable="true">C\'est l\'heure de pratiquer!</string>
    <string name="session_in_progress_notification_title" translatable="true">Pratique régulière</string>
    <string name="session_running_notification_text" translatable="true">Session en cours : reste %1$s sur %2$s</string>
    <string name="session_overstay_notification_text" translatable="true">Session prolongée : %1$s + %2$s</string>
    <string name="session_paused_notification_text" translatable="true">Session en pause : vous avez pratiqué %1$s et prévu %2$s</string>
    <string name="session_ended_notification_text" translatable="true">Session terminée, vous avez pratiqué %1$s, enregistrez votre état présent!</string>
    <string name="statistics" translatable="true">Statistiques</string>
    <string name="view_rewards_btn_txt_default" translatable="true">Récompenses</string>
    <string name="start_guided_session_btn_txt" translatable="true">Faire une session sur un support Audio</string>
    <string name="start_session_btn_or_more_txt" translatable="true">ou plus…</string>
    <string name="checking_existing_rewards_message" translatable="true">Vérification de l\'existence des récompenses…</string>
    <string name="generating_possible_rewards_message" translatable="true">Premier lancement, génération des récompenses…</string>
    <string name="inserting_possible_rewards_message" translatable="true">Premier lancement, enregistrement des récompenses…</string>
    <string name="looking_for_last_recorded_session_progress_dialog_title" translatable="true">Recherche de la dernière session enregistrée…</string>
    <string name="checking_for_streaks_breaks_progress_dialog_title" translatable="true">Recherche de récompenses perdues…</string>
    <string name="label_body" translatable="true">Corps</string>
    <string name="label_thoughts" translatable="true">Pensées</string>
    <string name="label_feelings" translatable="true">Émotions</string>
    <string name="label_global" translatable="true">Global</string>
    <string name="title_activity_session" translatable="true">SessionActivity</string>
    <string name="title_dialog_audio_duration_manual_entry" translatable="true">Impossible d\'obtenir la durée du fichier, entrer une durée</string>
    <string name="airplane_mode_starting_session_reminder_dialog_title" translatable="true">Pour éviter les interruptions…</string>
    <string name="airplane_mode_starting_session_reminder_dialog_text" translatable="true">Activer le \"mode avion\" \n(Le réglage vous sera proposé à nouveau en fin de session pour vous rappeler de le désactiver)</string>
    <string name="pre_record_dialog_default_title" translatable="true">Avant de commencer…</string>
    <string name="pre_record_dialog_manual_entry_title" translatable="true">Début de session</string>
    <string name="pre_record_intro_default_text" translatable="true">Comment vous sentez-vous, là, maintenant?</string>
    <string name="pre_record_intro_manual_entry_text" translatable="true">Comment vous sentiez-vous?</string>
    <string name="how_to_pause_instruction" translatable="true">Appui long pour mettre en pause ou arrêter…</string>
    <string name="start_countdown_beginning_session" translatable="true">Démarrage dans\n%1$d s</string>
    <string name="start_countdown_resuming_session" translatable="true">Reprise dans\n%1$d s</string>
    <string name="remaining_countdown" translatable="true">%1$d mn</string>
    <string name="bubble_timer_ext_content_description" translatable="true">Partie extérieure de la visualisation du compteur de temps: un cercle qui palpite</string>
    <string name="bubble_timer_int_content_description" translatable="true">Partie intérieure de la visualisation du compteur de temps: un cercle qui palpite</string>
    <string name="post_record_dialog_default_title" translatable="true">Et à présent…</string>
    <string name="post_record_dialog_manual_entry_title" translatable="true">Fin de session</string>
    <string name="post_record_intro_default_text" translatable="true">Comment vous sentez-vous, là, maintenant?</string>
    <string name="post_record_intro_text" translatable="true">Comment vous sentez-vous, là, maintenant?</string>
    <string name="post_record_intro_manual_entry_text" translatable="true">Comment vous sentiez-vous?</string>
    <string name="notes_label" translatable="true">Notes :</string>
    <string name="post_record_notes_hint" translatable="true">Vous pouvez noter ici vos remarques sur la session…</string>
    <string name="post_record_guide_mp3_hint" translatable="true">Vous pouvez noter ici le support sonore que vous avez utilisé…</string>
    <string name="post_record_cancel_warning_message" translatable="true">La session ne sera pas enregistrée!</string>
    <string name="post_record_cancel_ok_do_not_record" translatable="true">Ne pas enregistrer la session</string>
    <string name="guided_session_filename_unknown" translatable="true">Fichier audio inconnu</string>
    <string name="guided_session_artist_unknown" translatable="true">Artiste inconnu</string>
    <string name="guided_session_album_unknown" translatable="true">Album inconnu</string>
    <string name="add_action_string" translatable="true">Ajouter une session</string>
    <string name="view_list_action_string" translatable="true">Voir en liste</string>
    <string name="view_calendar_action_string" translatable="true">Voir en calendrier</string>
    <string name="view_stats_action_string" translatable="true">Voir les statistiques</string>
    <string name="edit_session_action_string" translatable="true">Modifier la session</string>
    <string name="view_stats_day_action_string" translatable="true">Voir les statistiques sur une journée</string>
    <string name="view_stats_week_action_string" translatable="true">Voir les statistiques sur une semaine</string>
    <string name="view_stats_month_action_string" translatable="true">Voir les statistiques sur un mois</string>
    <string name="view_stats_duration_action_string" translatable="true">Voir les statistiques en fonction de la durée des sessions</string>
    <string name="view_stats_mp3_action_string" translatable="true">Voir les statistiques d\'utilisation de supports sonores</string>
    <string name="edit_session_dialog_title" translatable="true">Modifier la session</string>
    <string name="delete_session_dialog_title" translatable="true">SUPPRIMER la session</string>
    <string name="loading_sessions_list_message" translatable="true">Chargement des sessions enregistrées…</string>
    <string name="empty_sessions_list_message" translatable="true">Aucune session à afficher…</string>
    <string name="date" translatable="true">Date</string>
    <string name="fake_date">01/02/3456</string>
    <string name="time" translatable="true">Heure</string>
    <string name="fake_time">13:47</string>
    <string name="guide_mp3_label" translatable="true">Support sonore :</string>
    <string name="search" translatable="true">Rechercher…</string>
    <string name="cross" translatable="true">Croix en \'X\'</string>
    <string name="magnifier" translatable="true">Loupe</string>
</resources>