<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/post_record_title_txtvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/post_record_dialog_default_title"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/post_record_manual_date_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_record_title_txtvw" />


        <TextView
            android:id="@+id/post_record_manual_date_value_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/post_record_manual_date_field_label"
            app:layout_constraintTop_toBottomOf="@+id/post_record_title_txtvw"
            tools:text="@string/fake_date" />

        <TextView
            android:id="@+id/post_record_manual_time_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/time"
            app:layout_constraintStart_toEndOf="@+id/post_record_manual_date_value_field"
            app:layout_constraintTop_toBottomOf="@+id/post_record_title_txtvw" />

        <TextView
            android:id="@+id/post_record_manual_time_value_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/post_record_manual_time_field_label"
            app:layout_constraintTop_toBottomOf="@+id/post_record_title_txtvw"
            tools:text="@string/fake_time" />

        <TextView
            android:id="@+id/post_record_intro_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/post_record_intro_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_record_manual_date_field_label" />

        <fr.shining_cat.meditappli.MoodRecorderViewGroup
            android:id="@+id/post_record_mood_recorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/post_record_intro_txt" />

        <TextView
            android:id="@+id/post_record_notes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/notes_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_record_mood_recorder" />

        <EditText
            android:id="@+id/post_record_notes_editTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/post_record_notes_hint"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_record_notes_label" />

        <TextView
            android:id="@+id/post_record_guide_mp3_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/guide_mp3_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_record_notes_editTxt" />

        <EditText
            android:id="@+id/post_record_guide_mp3_txtvw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/post_record_guide_mp3_hint"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_record_guide_mp3_label" />

        <Button
            android:id="@+id/post_record_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/generic_string_BACK"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_record_guide_mp3_txtvw" />

        <Button
            android:id="@+id/post_record_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/generic_string_OK"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_record_guide_mp3_txtvw" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_v_postrecord_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>