<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="326dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/infos_content_txtvw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/infos_text_string"
            android:textSize="18sp" />
    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/dividerVertical"
        app:layout_constraintBottom_toTopOf="@+id/infos_appname_txtvw" />


    <TextView
        android:id="@+id/infos_appname_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/infos_appversion_txtvw"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/infos_appversion_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:text="@string/app_version"
        app:layout_constraintBottom_toTopOf="@+id/infos_appmadeby_txtvw"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/infos_appmadeby_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:text="@string/app_made_by"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/infos_name_txtvw"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/infos_name_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:text="@string/app_made_name"
        app:layout_constraintBottom_toTopOf="@+id/infos_contact_txtvw"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/infos_contact_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:text="@string/contact"
        app:layout_constraintBottom_toTopOf="@+id/infos_website_txtvw"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/infos_website_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:text="@string/website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/infos_logo_shining-cat_imgvw"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/shining_cat_logo_content_description"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:src="@drawable/signature_kiwi_noir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


</android.support.constraint.ConstraintLayout>