<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/transparent" >

  <EditText
    android:id="@+id/searchbar_widget_edittext"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/white"
    android:hint="@string/search"
    android:inputType="text"
    android:imeOptions="actionDone"
    android:textColor="@android:color/white"
    android:textColorHint="@color/whiteAlpha85"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/searchbar_widget_clear_btn"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginStart="8dp"
    android:clickable="true"
    android:contentDescription="@string/cross"
    android:focusable="true"
    android:src="@drawable/ic_clear_white_36dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toEndOf="@+id/searchbar_widget_edittext"
    app:layout_constraintTop_toTopOf="parent" />


  <ImageView
    android:id="@+id/searchbar_widget_search_btn"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:contentDescription="@string/magnifier"
    android:src="@drawable/ic_search_white_36dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toEndOf="@id/searchbar_widget_clear_btn"
    app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>